2016-04-26  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/sysdep1.c: Implement DTR toggle via TIOCMBIC+TIOCMBIS. Old
	change by R.L. Horn.

2016-04-25  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c: Add missing fclose, found be David Binderman.

2016-04-17  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/dial.c, src/main.c, src/minicom.h, src/updown.c: Improvement
	to socket handling code.

2015-11-15  Eyal Birger <eyal.birger@gmail.com>

	* src/script.c: Proper shell exit status handling.

2015-11-01  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/nb.po: Update from Translation team.

2015-08-24  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c, src/configsym.h, src/main.c, src/rwconf.c,
	  man/minicom.1, NEWS: Add F11 and F12 for use in macros.

	* src/wkeys.c: Add default for F10 key in case termcap does not
	  deliver one.

2015-05-23  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/window.c: Remove SMOOTH code blocks.

	* src/minicom.h, src/vt100.c, src/window.c, src/window.h: Add
	  alternate screen support. Initial change by
	  陈愚人 <yurencheng@gmail.com>.

	* src/dial.c: musl-libc compile fix. By Felix Janda.

	* src/getsdir, src/getsdir.h: Use POSIX NAME_MAX. By Felix Janda.

2014-09-13  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/fr.po: Update by translation team.

2014-09-05  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c: Use dial_tty for status line, by Steven Jian.

2014-08-31  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/fr.po: Update by translation team.

2014-08-04  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/id.po: Update by translation team.

2014-07-19  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c, src/minicom.h: Fix name suffix for non-global
	configuration savings. By Henner Zeller.

	* man/minicom.1: Add 'U' key shortcut. By Henner Zeller.

2014-04-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
